@@ -5,13 +5,16 @@ import com.tratoHecho.backend_trato_hecho.dto.ServicioResponseDTO;
 import com.tratoHecho.backend_trato_hecho.model.*;
 import com.tratoHecho.backend_trato_hecho.repository.*;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.Cache;
+import org.springframework.cache.CacheManager;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -26,13 +29,19 @@ public class ServicioService {
     private final ServicioMultimediaRepository servicioMultimediaRepository;
     private final CalificacionRepository calificacionRepository;
 
-    // Inyectamos el servicio de Firebase
     private final FirebaseStorageService firebaseStorageService;
 
+    // Inyectamos el CacheManager para manipular la memoria manualmente
+    private final CacheManager cacheManager;
+
     @Transactional
+    // ELIMINAMOS @CacheEvict para no borrar todo. Lo haremos manual.
     public ServicioResponseDTO crearServicio(ServicioRequestDTO dto, List<MultipartFile> archivos) {
 
-        // 1. Crear el Servicio base (Datos de texto)
+        if (archivos != null && archivos.size() > 3) {
+            throw new IllegalArgumentException("Solo se permite subir un máximo de 3 archivos multimedia por servicio.");
+        }
+
         Usuario usuario = usuarioRepository.findById(dto.getUserId())
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado con ID: " + dto.getUserId()));
 
@@ -46,7 +55,6 @@ public class ServicioService {
 
         servicioRepository.save(servicio);
 
-        // 2. Asociar categorías
         if (dto.getCategoriasIds() != null && !dto.getCategoriasIds().isEmpty()) {
             for (Long catId : dto.getCategoriasIds()) {
                 Categoria categoria = categoriaRepository.findById(catId)
@@ -58,34 +66,29 @@ public class ServicioService {
                         .build();
 
                 categoriaServicioRepository.save(cs);
+                servicio.getCategorias().add(cs);
             }
         }
 
-        // 3. ✅ FLUJO VERIFICADO: SUBIR ARCHIVOS A FIREBASE Y GUARDAR URL
         if (archivos != null && !archivos.isEmpty()) {
             for (MultipartFile archivo : archivos) {
                 try {
-                    // A. Subir a Firebase y obtener URL pública
                     String url = firebaseStorageService.uploadFile(archivo);
+                    String tipo = archivo.getContentType() != null && archivo.getContentType().startsWith("video") ? "VIDEO" : "IMAGEN";
 
-                    // B. Determinar tipo (IMAGEN o VIDEO)
-                    String tipo = archivo.getContentType().startsWith("video") ? "VIDEO" : "IMAGEN";
-
-                    // C. Crear registro de tipo Multimedia
-                    // (Idealmente aquí buscarías si ya existe el tipo para reutilizarlo, pero crear uno nuevo funciona)
                     Multimedia multimedia = Multimedia.builder()
                             .mulTipo(tipo)
                             .build();
                     multimediaRepository.save(multimedia);
 
-                    // D. Guardar en tabla intermedia SERVICIO_MULTIMEDIA
                     ServicioMultimedia sm = ServicioMultimedia.builder()
                             .servicio(servicio)
                             .multimedia(multimedia)
-                            .serMulLink(url) // <-- AQUÍ SE GUARDA EL LINK DE FIREBASE EN LA BD
+                            .serMulLink(url)
                             .build();
 
                     servicioMultimediaRepository.save(sm);
+                    servicio.getMultimedia().add(sm);
 
                 } catch (IOException e) {
                     throw new RuntimeException("Error al subir archivo: " + archivo.getOriginalFilename(), e);
@@ -93,11 +96,15 @@ public class ServicioService {
             }
         }
 
-        // 4. Mapear respuesta para devolver al frontend
-        return mapearAServicioDTO(servicio);
+        ServicioResponseDTO nuevoDto = mapearAServicioDTO(servicio);
+
+        actualizarCacheLista(nuevoDto);
+
+        return nuevoDto;
     }
 
     @Transactional(readOnly = true)
+    @Cacheable(value = "servicio_detalle", key = "#id")
     public ServicioResponseDTO obtenerServicioDTOPorId(Long id) {
         Servicio servicio = servicioRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Servicio no encontrado con ID: " + id));
@@ -105,19 +112,26 @@ public class ServicioService {
     }
 
     @Transactional(readOnly = true)
+    @Cacheable(value = "servicios", key = "'all'")
     public List<ServicioResponseDTO> obtenerTodosDTO() {
-        return servicioRepository.findAll().stream().map(this::mapearAServicioDTO).toList();
+        return servicioRepository.findAll().stream()
+                .map(this::mapearAServicioDTO)
+                .collect(Collectors.toList());
     }
 
     private ServicioResponseDTO mapearAServicioDTO(Servicio s) {
-        List<String> categorias = categoriaServicioRepository.findByServicio(s)
-                .stream().map(cs -> cs.getCategoria().getCatNombre()).toList();
+        List<String> categorias = (s.getCategorias() != null) ? s.getCategorias().stream()
+                .map(cs -> cs.getCategoria().getCatNombre())
+                .collect(Collectors.toList()) : new ArrayList<>();
 
-        List<String> multimedia = servicioMultimediaRepository.findByServicio(s)
-                .stream().map(ServicioMultimedia::getSerMulLink).toList();
+        List<String> multimedia = (s.getMultimedia() != null) ? s.getMultimedia().stream()
+                .map(ServicioMultimedia::getSerMulLink)
+                .collect(Collectors.toList()) : new ArrayList<>();
 
         Double promedio = calificacionRepository.obtenerPromedioPorServicio(s.getSerId());
         double promedioFinal = (promedio != null) ? promedio : 0.0;
+
+        int totalCalificaciones = (s.getCalificaciones() != null) ? s.getCalificaciones().size() : 0;
 
         return ServicioResponseDTO.builder()
                 .id(s.getSerId())
@@ -129,9 +143,28 @@ public class ServicioService {
                 .usuarioNombre(s.getUsuario().getUserNombreCompleto())
                 .usuarioFoto(s.getUsuario().getUserFotoPerfil())
                 .promedioCalificacion(promedioFinal)
-                .totalCalificaciones(s.getCalificaciones() != null ? s.getCalificaciones().size() : 0)
+                .totalCalificaciones(totalCalificaciones)
                 .categorias(categorias)
                 .multimediaUrls(multimedia)
                 .build();
+    }
+
+    private void actualizarCacheLista(ServicioResponseDTO nuevoServicio) {
+        Cache cache = cacheManager.getCache("servicios");
+        if (cache != null) {
+            List<ServicioResponseDTO> listaActual = cache.get("all", List.class);
+
+            if (listaActual != null) {
+                List<ServicioResponseDTO> listaModificable = new ArrayList<>(listaActual);
+
+                listaModificable.add(nuevoServicio);
+
+                cache.put("all", listaModificable);
+            }
+        }
+        Cache cacheDetalle = cacheManager.getCache("servicio_detalle");
+        if (cacheDetalle != null) {
+            cacheDetalle.put(nuevoServicio.getId(), nuevoServicio);
+        }
     }
 }
